# my_ripgrep

./: Cargo.toml  README.md
crates/core/: main.rs
crates/core/flags/: hiargs.rs  lowargs.rs  mod.rs  parser.rs
crates/globset/: Cargo.toml
